--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="370dp"
-    android:layout_margin="8dp"
-    android:layout_height="230dp">
+    android:layout_width="match_parent"
+    android:layout_margin="@dimen/_8sdp"
+    android:layout_height="@dimen/_150sdp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
@@ -12,14 +12,14 @@
         android:layout_height="match_parent"
         android:backgroundTint="@color/purple_500"
         android:orientation="vertical"
-        app:cardCornerRadius="25dp"
+        app:cardCornerRadius="@dimen/_20sdp"
         app:cardElevation="0dp" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="32dp"
+        android:layout_marginHorizontal="@dimen/_20sdp"
         android:alpha="0.6"
         android:fontFamily="@font/fredokaone_regular"
         android:text="@string/name"
@@ -35,42 +35,43 @@
         android:id="@+id/textView5"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="32dp"
+        android:layout_marginHorizontal="@dimen/_20sdp"
         android:textColor="@color/white"
-        android:textSize="20sp"
+        android:textSize="@dimen/_16ssp"
         app:layout_constraintBottom_toTopOf="@id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
-        tools:text="Arya Wijaya" />
+        android:text="Arya Wijaya" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="32dp"
+        android:layout_marginHorizontal="@dimen/_20sdp"
         android:textAlignment="textStart"
         android:textColor="@color/white"
 
-        android:textSize="30sp"
+        android:textSize="@dimen/_20ssp"
+        android:maxLines="1"
         app:layout_constraintBottom_toTopOf="@id/textView7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
-        tools:text="5542 1235 1235 2654" />
+        android:text="5542 1235 1235 2654" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="32dp"
+        android:layout_marginHorizontal="@dimen/_20sdp"
         android:alpha="0.6"
         android:fontFamily="@font/fredokaone_regular"
         android:text="@string/balance"
 
         android:textAlignment="textStart"
         android:textColor="@color/white"
-        android:textSize="16sp"
+        android:textSize="@dimen/_16ssp"
         app:layout_constraintBottom_toTopOf="@id/balance"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,15 +81,15 @@
         android:id="@+id/balance"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="32dp"
+        android:layout_marginHorizontal="@dimen/_20sdp"
         android:textAlignment="textStart"
         android:textColor="@color/white"
 
-        android:textSize="30sp"
+        android:textSize="@dimen/_20ssp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7"
-        tools:text="10,500 EGP" />
+        android:text="10,500 EGP" />
 </androidx.constraintlayout.widget.ConstraintLayout>
