--- a/app/src/main/res/layout/intro_fragment.xml
+++ b/app/src/main/res/layout/intro_fragment.xml
@@ -14,7 +14,7 @@
         app:layout_constraintGuide_percent="0.6" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/img"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:scaleType="fitCenter"
@@ -39,13 +39,13 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
+        android:layout_marginHorizontal="@dimen/_30sdp"
         android:alpha="0.9"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="@dimen/_30sdp"
         android:fontFamily="@font/fredokaone_regular"
         android:text="@string/easiest_way_to_manage_your_wallet"
         android:textColor="@color/purple_700"
-        android:textSize="28sp"
+        android:textSize="@dimen/_20ssp"
         app:layout_constraintEnd_toEndOf="@+id/view4"
         app:layout_constraintStart_toStartOf="@+id/view4"
         app:layout_constraintTop_toTopOf="@+id/guideline2" />
@@ -55,18 +55,21 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:alpha="0.4"
+        android:maxLines="2"
+        android:autoSizeTextType="uniform"
         android:text="@string/connect_your_wallet_to_your_friends_family_brand_and_experience"
-        android:textSize="20sp"
+        android:textSize="@dimen/_12ssp"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:id="@+id/btn"
+        android:layout_width="@dimen/_50sdp"
+        android:layout_height="@dimen/_50sdp"
         android:background="@drawable/rounded_btn"
         android:src="@drawable/ic_arrow"
-        android:padding="20dp"
+        android:padding="@dimen/_15sdp"
         app:layout_constraintBottom_toBottomOf="@+id/view4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
